[project]
name = "siads593-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "beautifulsoup4>=4.13.4",
    "bokeh>=3.7.3",
    "folium>=0.20.0",
    "ipykernel>=6.30.1",
    "ipympl>=0.9.7",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pip>=25.2",
    "plotly>=6.2.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "scrapy>=2.13.3",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.42",
    "statsmodels>=0.14.5",
    "watermark>=2.5.0",
]
